# columns-server

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  columns-server.cabal  stack.yaml
app/: Main.hs
src/: Columns.hs
src/Columns/: Game.hs  Render.hs  Server.hs  TUI.hs  Types.hs
src/Columns/Game/: Types.hs
src/Columns/Game/Types/: Array.hs  N4.hs
src/Columns/Render/: Styles.hs
src/Columns/Server/: Auth.hs  Types.hs
src/Columns/Types/: N4.hs
test/: Spec.hs
