name:                columns-server
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov
-- maintainer:
copyright:           Aleksey Pirogov aka astynax
category:            Web,Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Columns
                     , Columns.Render
                     , Columns.Render.Styles
                     , Columns.Server
                     , Columns.TUI
                     , Columns.Types
                     , Columns.Types.N4
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , clay
                     , http-types
                     , mtl
                     , scotty
                     , text
                     , wai
                     , wai-cli
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

executable columns-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , columns-server
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite columns-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , columns-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/astynax/columns-server
